[feat] Dockerfile 수정